2001-04-27  Hans Petter Jansson  <hpj@ximian.com>

	Did a h4rD<0r3 patch of disks-conf.in, to allow it to operate on
	ext2 LABEL= devices found in the fstab.

	* disks-conf.in (update_partition): If we have a device node, try to get
	  its label. If we have a label, look for partitions with matching label
	  in all disks. Set the label when appropriate. Retrofitted with the new
	  filesys code.
	  (get_partition): Look for label as well.
	  (get_partition_data): Ditto.
	  (read_fstab): Handle LABEL= lines.
	  (write_fstab): Ditto.
	  (xml_parse_partition): Parse <label> tags.
	  (xml_print): Print <label> tags.

2001-04-27  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_open_filter_write_from_names): Corrected a bug which
	  would cause the file to never be found. Local variables don't propagate
	  upwards.

2001-04-27  Arturo Espinosa Aldama  <arturo@ximian.com>

	* parse.pl.in (xst_parse_process_sh_line): sepparated from
	shell parsing code for reusability.

	* boot.pl.in (xst_boot_conf_replace_image): simplified function.
	Still too big, but not as much. Fixed bug that appeared when two
	sections using the same image but different label. No values
	come out with the quotes inside. This are added/deleted now at
	the backend level.

	* boot-conf.in (xml_parse_boot): Added keytable support, guided by
	some unexplained impulse.
	(xml_print): replaced xml_print_globals with xst_xml_print_scalars.

2001-04-26  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-conf.in: removed useless commented debug code.
	* boot.pl.in: Added mandrake-7.2 and debian-2.2 table equivalences.
	Fixed bug where a comment would get into the options hash.
	* memory-conf.in: end_of_description; should go at beginning of line.
	* time-conf.in: qw values were separated by comma. fixed.
	timezone description file comments are those that START with #.
	
2001-04-26  Chema Celorio  <chema@celorio.com>

	* Makefile.am (EXTRA_DIST): add print-conf.in to pass distcheck